Archive2/cc/78dbf73e02adfa/output
main.cpp: In function 'int main()':
main.cpp:15:56: error: no matching function for call to 'duration_cast(std::chrono::seconds&)'
     std::cout << std::chrono::duration_cast<double>(sec).count()
                                                        ^
In file included from main.cpp:2:0:
/usr/local/include/c++/5.1.0/chrono:194:7: note: candidate: template<class _ToDur, class _Rep, class _Period> constexpr typename std::enable_if<std::chrono::__is_duration<_Tp>::value, _ToDur>::type std::chrono::duration_cast(const std::chrono::duration<_Rep, _Period>&)
       duration_cast(const duration<_Rep, _Period>& __d)
       ^
/usr/local/include/c++/5.1.0/chrono:194:7: note:   template argument deduction/substitution failed:
/usr/local/include/c++/5.1.0/chrono: In substitution of 'template<class _ToDur, class _Rep, class _Period> constexpr typename std::enable_if<std::chrono::__is_duration<_Tp>::value, _ToDur>::type std::chrono::duration_cast(const std::chrono::duration<_Rep, _Period>&) [with _ToDur = double; _Rep = <missing>; _Period = <missing>]':
main.cpp:15:56:   required from here
/usr/local/include/c++/5.1.0/chrono:194:7: error: no type named 'type' in 'struct std::enable_if<false, double>'
